@@ -1,4 +1,4 @@
-2005-10-22  Jeff McGee <JeffAMcGee@gmail.com>
+2005-10-27  Jeff McGee <JeffAMcGee@gmail.com>
 
 	* added special titlebars for dialogs
 	* slow down mouse over titlebar
@@ -7,6 +7,8 @@
 	* added window shading
 	* the window border is a little lighter
 	* removed reverse italicized titlebar since it's too hard to read
+	* honor preference for color of inactive windows
+	* small bugfixes
 
 2005-07-11  Jeff McGee <JeffAMcGee@gmail.com>
 
